--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">Chat Now</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="digits">1234567890QWERTYUIOPASDFGHJKLZXCVBNMmnbvcxzlkjhgfdsapoiuytrewq</string>
+    <string name="logout">Logout</string>
+    <string name="todo">TODO</string>
+    <string name="change_password">Change Password</string>
+    <string name="edit_personal_information">Edit Personal Information</string>
+    <string name="sending_a_message">Sending a message</string>
+    <string name="enter_message">Enter message</string>
+    <string name="update">Update</string>
 </resources>
